k8s/projects/minikube_deploy_test/overlays/production/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-svc-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: node-svc
  policyTypes: [Ingress]
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: redis-svc
      ports:
        - port: 3000
